tests/ui/lifetimes/missing-lifetime-in-assoc-type-2.stderr
error: in the trait associated type is declared without lifetime parameters, so using a borrowed type for them requires that lifetime to come from the implemented type
  --> $DIR/missing-lifetime-in-assoc-type-2.rs:5:17
   |
LL | impl IntoIterator for &S {
   |     - you could add a lifetime on the impl block, if the trait or the self type can have one
LL |     type Item = &T;
   |                 ^ this lifetime must come from the implemented type

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/missing-lifetime-in-assoc-type-2.rs:7:57
   |
LL |     type IntoIter = std::collections::btree_map::Values<'a, i32, T>;
   |                                                         ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL | impl<'a> IntoIterator for &S {
   |     ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
